recursion.lessons.recursion.koch.SquareKoch.scala.error
SquareKoch:19: error: ')' expected but integer literal found.
	squareSide(levels - 1, length  3);
                                       ^